# datastructuredll

./: CMakeLists.txt  README.md
Task Manager/.metadata/: version.ini
Task Manager/.metadata/.plugins/org.eclipse.cdt.core/: DLLTaskManager.1646973545255.pdom  DLLTaskManager.language.settings.xml  teacher task.language.settings.xml
Task Manager/.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/DLLTaskManager/: DLLTaskManager
Task Manager/.metadata/.plugins/org.eclipse.core.resources/: 1.snap
Task Manager/.metadata/.plugins/org.eclipse.debug.core/.launches/: DLLTaskManager.exe.launch
Task Manager/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
Task Manager/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Task Manager/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2022/3/11/: refactorings.history  refactorings.index
Task Manager/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2022/3/12/: refactorings.history  refactorings.index
Task Manager/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
Task Manager/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Task Manager/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
Task Manager/DLLTaskManager/: .cproject  .project  DLL.cpp  DNode.cpp  DNode.hpp  ListofTasks.txt  MainDLL.cpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
(+2 files in other folders)
